# Copyright 2024 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load("@rules_python//sphinxdocs:sphinx_docs_library.bzl", "sphinx_docs_library")
load("//pw_build:compatibility.bzl", "incompatible_with_mcu")

package(default_visibility = ["//visibility:public"])

sphinx_docs_library(
    name = "docs",
    srcs = [
        "Kconfig",
        "docs.rst",
    ],
    prefix = "pw_thread_zephyr/",
    target_compatible_with = incompatible_with_mcu(),
)

# TODO: https://pwbug.dev/380001331 - Make this a zephyr_cc_library
exports_files([
    "id_public_overrides/pw_thread_backend/id_inline.h",
    "id_public_overrides/pw_thread_backend/id_native.h",
    "public/pw_thread_zephyr/context.h",
    "public/pw_thread_zephyr/id_inline.h",
    "public/pw_thread_zephyr/id_native.h",
    "public/pw_thread_zephyr/options.h",
    "public/pw_thread_zephyr/priority.h",
    "public/pw_thread_zephyr/sleep_inline.h",
    "public/pw_thread_zephyr/stack.h",
    "public/pw_thread_zephyr/thread_inline.h",
    "public/pw_thread_zephyr/thread_native.h",
    "sleep_public_overrides/pw_thread_backend/sleep_inline.h",
    "sleep.cc",
    "thread_public_overrides/pw_thread_backend/context.h",
    "thread_public_overrides/pw_thread_backend/options.h",
    "thread_public_overrides/pw_thread_backend/priority.h",
    "thread_public_overrides/pw_thread_backend/stack.h",
    "thread_public_overrides/pw_thread_backend/thread_inline.h",
    "thread_public_overrides/pw_thread_backend/thread_native.h",
    "thread.cc",
])
