# Copyright 2025 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load("//pw_bluetooth_proxy/gatt:gatt.bzl", "pw_bluetooth_proxy_gatt_library", "pw_bluetooth_proxy_gatt_test")
load("//pw_unit_test:pw_cc_test.bzl", "pw_cc_test")

package(
    default_visibility = ["//visibility:public"],
    features = [
        "-layering_check",
        "-ctad_warnings",
    ],
)

licenses(["notice"])

pw_bluetooth_proxy_gatt_library(
    name = "gatt",
    versioned_deps = ["//pw_bluetooth_proxy:pw_bluetooth_proxy"],
)

pw_bluetooth_proxy_gatt_library(
    name = "gatt_v1",
    testonly = True,
    versioned_deps = ["//pw_bluetooth_proxy:pw_bluetooth_proxy_sync_mbv1"],
    visibility = ["//visibility:private"],
)

pw_bluetooth_proxy_gatt_library(
    name = "gatt_v2",
    testonly = True,
    versioned_deps = ["//pw_bluetooth_proxy:pw_bluetooth_proxy_sync_mbv2"],
    visibility = ["//visibility:private"],
)

pw_bluetooth_proxy_gatt_library(
    name = "gatt_async_mbv2",
    testonly = True,
    versioned_deps = ["//pw_bluetooth_proxy:pw_bluetooth_proxy_async_mbv2"],
    visibility = ["//visibility:private"],
)

pw_bluetooth_proxy_gatt_test(
    name = "gatt_v1_test",
    versioned_deps = [
        ":gatt_v1",
    ],
)

pw_bluetooth_proxy_gatt_test(
    name = "gatt_v2_test",
    versioned_deps = [
        ":gatt_v2",
    ],
)

pw_cc_test(
    name = "gatt_integration_test",
    srcs = ["gatt_integration_test.cc"],
    deps = [
        ":gatt_async_mbv2",
        "//pw_allocator:testing",
        "//pw_bluetooth_proxy:test_utils_async_mbv2",
        "//pw_containers:vector",
    ],
)
