# Copyright 2025 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

import("//build_overrides/pigweed.gni")

import("$dir_pigweed/third_party/emboss/emboss.gni")
import("$dir_pw_build/target_types.gni")
import("$dir_pw_thread/backend.gni")
import("$dir_pw_unit_test/test.gni")

config("public_include_path") {
  include_dirs = [ "public" ]
  visibility = [ ":*" ]
}

pw_source_set("gatt") {
  # LINT.IfChange
  public = [ "public/pw_bluetooth_proxy/gatt/gatt.h" ]
  public_configs = [ ":public_include_path" ]
  public_deps = [
    "$dir_pw_allocator",
    "$dir_pw_assert:check",
    "$dir_pw_bluetooth_proxy",
    "$dir_pw_containers:dynamic_vector",
    "$dir_pw_containers:intrusive_map",
    "$dir_pw_log",
  ]
  deps = [
    "$dir_pw_bluetooth:emboss_att",
    "$dir_pw_bluetooth:emboss_util",
  ]
  sources = [ "gatt.cc" ]

  # LINT.ThenChange(Android.bp, BUILD.bazel, CMakeLists.txt)
}

pw_test("gatt_test") {
  enable_if = dir_pw_third_party_emboss != "" && pw_thread_ID_BACKEND != ""

  # LINT.IfChange
  sources = [ "gatt_test.cc" ]
  deps = [
    ":gatt",
    "$dir_pw_allocator:libc_allocator",
    "$dir_pw_allocator:synchronized_allocator",
    "$dir_pw_allocator:testing",
    "$dir_pw_containers:vector",
    "$dir_pw_multibuf:simple_allocator",
    "$dir_pw_sync:no_lock",
  ]

  # LINT.ThenChange(BUILD.bazel, CMakeLists.txt)
}
