# Copyright 2025 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("//pw_unit_test:pw_cc_test.bzl", "pw_cc_test")

package(
    default_visibility = ["//visibility:public"],
    features = ["-layering_check"],
)

licenses(["notice"])

cc_library(
    name = "command_multiplexer",
    # LINT.IfChange
    srcs = [
        "command_multiplexer.cc",
    ],
    hdrs = [
        "public/pw_bluetooth_proxy/hci/command_multiplexer.h",
        "public/pw_bluetooth_proxy/hci/internal/type_safe_ids.h",
    ],
    strip_include_prefix = "public",
    deps = [
        "//pw_allocator",
        "//pw_assert:assert",
        "//pw_assert:check",
        "//pw_async2:poll",
        "//pw_async2:time_provider",
        "//pw_bluetooth:emboss_hci_commands",
        "//pw_bluetooth:emboss_hci_common",
        "//pw_bluetooth:emboss_hci_events",
        "//pw_bluetooth:emboss_hci_h4",
        "//pw_chrono:system_clock",
        "//pw_chrono:system_timer",
        "//pw_containers:dynamic_queue",
        "//pw_containers:intrusive_map",
        "//pw_function",
        "//pw_log",
        "//pw_multibuf:multibuf_v2",
        "//pw_result",
        "//pw_result:expected",
        "//pw_span",
        "//pw_status",
        "//pw_sync:lock_annotations",
        "//pw_sync:mutex",
    ],
    # LINT.ThenChange(Android.bp, BUILD.gn, CMakeLists.txt)
)

# Tests

pw_cc_test(
    name = "command_multiplexer_test",

    # LINT.IfChange
    srcs = [
        "command_multiplexer_test.cc",
    ],
    deps = [
        ":command_multiplexer",
        "//pw_allocator:testing",
        "//pw_async2:pend_func_task",
        "//pw_async2:simulated_time_provider",
        "//pw_async2:testing",
        "//pw_chrono:system_clock",
        "//pw_containers:vector",
        "//pw_function",
    ],
    # LINT.ThenChange(Android.bp, BUILD.gn, CMakeLists.txt)
)
