# Copyright 2025 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

import("//build_overrides/pigweed.gni")

import("$dir_pw_unit_test/test.gni")

config("public_include_path") {
  include_dirs = [ "public" ]
  visibility = [ ":*" ]
}

pw_source_set("command_multiplexer") {
  # LINT.IfChange
  public = [
    "public/pw_bluetooth_proxy/hci/command_multiplexer.h",
    "public/pw_bluetooth_proxy/hci/internal/type_safe_ids.h",
  ]
  public_configs = [ ":public_include_path" ]
  public_deps = [
    "$dir_pw_assert:check",
    "$dir_pw_async2:poll",
    "$dir_pw_async2:time_provider",
    "$dir_pw_bluetooth:emboss_hci_commands",
    "$dir_pw_bluetooth:emboss_hci_common",
    "$dir_pw_bluetooth:emboss_hci_events",
    "$dir_pw_bluetooth:emboss_hci_h4",
    "$dir_pw_chrono:system_clock",
    "$dir_pw_chrono:system_timer",
    "$dir_pw_containers:dynamic_queue",
    "$dir_pw_containers:intrusive_map",
    "$dir_pw_function",
    "$dir_pw_log",
    "$dir_pw_multibuf:multibuf_v2",
    "$dir_pw_span",
    "$dir_pw_status",
    "$dir_pw_sync:lock_annotations",
    "$dir_pw_sync:mutex",
  ]
  sources = [ "command_multiplexer.cc" ]

  # LINT.ThenChange(Android.bp, BUILD.bazel, CMakeLists.txt)
  visibility = [ ":*" ]
}

pw_test("command_multiplexer_test") {
  # LINT.IfChange
  sources = [ "command_multiplexer_test.cc" ]
  deps = [
    ":command_multiplexer",
    "$dir_pw_allocator:testing",
    "$dir_pw_async2:pend_func_task",
    "$dir_pw_async2:simulated_time_provider",
    "$dir_pw_async2:testing",
    "$dir_pw_containers:vector",
  ]

  # LINT.ThenChange(Android.bp, BUILD.bazel, CMakeLists.txt)
}
